--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,14 @@ body {
     justify-content: center;
 }
 
+h1 {
+    margin-bottom: -10px;
+}
+
+.songInfo{
+    text-align: center;
+}
+
 button {
     width: 150px;
 }
